# lesson-computer-vision

./: README.md  pyproject.toml  requirements.txt
assign_1/: README.md
cvision_workspace/assignment_1/: main.py
group_proj/: README.md  dataset_gen.py  double_camera.py  main.py  train.py
